@@ -1,4 +1,5 @@
             Allow changeInterval with large (>32 bit) intervals (fix #1438)
+            changeInterval now changes the interval immediately when it's called inside the interval it is changing (fix #1440)
 
      1v99 : Increase jslMatch error buffer size to handle "UNFINISHED TEMPLATE LITERAL" string (#1426)
             nRF5x: Make FlashWrite cope with flash writes > 4k
